[package]
name = "prometheus-metric-storage-derive"
version = "0.3.0"
authors = ["Tamika Nomara <taminomara@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/taminomara/prometheus-metric-storage"
homepage = "https://github.com/taminomara/prometheus-metric-storage"
documentation = "https://docs.rs/prometheus-metric-storage"
description = "Implementation details for prometheus-metric-storage"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
