[package]
name = "prometheus-metric-storage"
version = "0.2.0"
authors = ["Tamika Nomara <taminomara@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/taminomara/prometheus-metric-storage"
homepage = "https://github.com/taminomara/prometheus-metric-storage"
documentation = "https://docs.rs/prometheus-metric-storage"
description = "Derive macro to instantiate and register prometheus metrics without having to write tons of boilerplate code"
readme = "../README.md"

[dependencies]
prometheus = "0.12"
prometheus-metric-storage-derive = { version = "0.2.0", path = "../prometheus-metric-storage-derive" }
lazy_static = "1.4"
